Add support to build using Open JDK 11 and run in 17